--- a/index.html
+++ b/index.html
@@ -1,2 +1,87 @@
-test
-test2
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>this is header1</h1>
+    <h2>this is header2</h2>
+    <h3>this is header3</h3>
+    <h4>this is header4</h4>
+    <h5>this is header5</h5>
+    <h6>this is header6</h6>
+    <input type="text" onfocus="myFunction(Pack)">
+    <p>this is paragraph</p>
+    <a href="https://www.google.com">link to www.google.com</a><br />
+    <a href="./link.html">link to another html file</a><br>
+    <a href="./day1/index.html">index.html</a><br>
+    <hr>
+    <img src="https://www.thairath.co.th/media/dFQROr7oWzulq5FZYANuEZlRY89MbBZGbB03TL7pGDPeb11CkdQJhamTfLVYfEGR0DP.jpg"
+        alt="sea">
+    <button>click</button>
+    <hr>
+    <ul>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    <hr>
+    <ol>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ol>
+    <div>content</div>
+    <div>content</div>
+    <div>content</div>
+    <span>content</span><span>content</span><span>content</span>
+
+    <table>
+        <thead>
+            <tr>
+                <th>head of table</th>
+                <th>head of table</th>
+                <th>head of table</th>
+                <th>head of table</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+            <tr>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+                <td>data in table</td>
+            </tr>
+        </tbody>
+    </table>
+    <form action="">
+        <input type="text"><br>
+        <input type="text"><br>
+        <input type="text"><br>
+        <input type="text"><br>
+    </form>
+</body>
+
+</html>
