--- a/Oak code kata/3.set its title.html
+++ b/Oak code kata/3.set its title.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--ข้อ3 Create a webpage and set its title to "This is a webpage" -->
+    <title>This is webpage</title>
 </head>
 <body>
-   <!-- ข้อ2 Create a webpage that prints the numbers 1 - 10 to the screen. -->
-    <p>1 2 3 4 5 6 7 8 9 10</p>
+    
 </body>
 </html>
