--- a/Oak code kata/1.prints_name.html
+++ b/Oak code kata/1.prints_name.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- ข้อที่1.Create a webpage that prints your name to the screen. -->
+    <!--ข้อที่ 1 Create a webpage that prints your name to the screen. -->
     <p>Pack</p>
 </body>
 </html>
