--- a/Oak code kata/5.No_header_print.html
+++ b/Oak code kata/5.No_header_print.html
@@ -7,6 +7,6 @@
 
 <body>
     <!--ข้อ5 Create a webpage that prints any text of your choosing to the screen, do not include a head section in the code. -->
-    <p>No header print on sceen.</p>
+    <p>No header print on screen.</p>
 </body>
 </html>
