--- a/Lab.HTML
+++ b/Lab.HTML
@@ -75,6 +75,7 @@
             <span class="spacebar"><a href="#attribute">1.Attribute</a></span> 
             <span class="spacebar"><a href="#diff"> 2.Differentiation</a></span>
             <span class="spacebar"><a href="#type">3.input type</a></span>
+            <span class="spacebar"><a href="#minilab">4.Lab เสริม</a></span>
         </nav> 
         <br />
         <h1 id="attribute">
@@ -1109,7 +1110,53 @@
                 <td id="sub2">ใช้ระบุสัปดาห์และปี (ไม่เกี่ยวข้องกับ timezone)</td>  
             </tr>     
         </table>
-        
+        <table>
+            <h1 id="minilab"> 4.Lab เสริม<h1>
+            <thead>
+                <tr>
+                    <td id="sub1">< Tag ></td>
+                    <td id="sub2">คำอธิบาย</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td id="sub1">< strong>< /strong ></td>
+                    <td id="sub2">ใช้เน้นข้อความหรืออักษรที่ครอบไว้ว่าเป็นข้อความสำคัญโดยการทำอักษรหนา</td>
+                </tr>
+                <tr>
+                    <td id="sub1">< label >< /label ></td>
+                    <td id="sub2">ใช้เป็นป้ายกำกับว่าแบบform หรือ พื้นที่รับข้อมูลนี้ชื่อว่าอะไร</td>
+                </tr>
+                <tr>
+                    <td id="sub1">< del >< /del ></td>
+                    <td id="sub2">ใช้แสดงการลบข้อความที่ครอบเอาไว้(เป็นการขีดฆ่าตัวอักษรที่ครอบไว้)</td>
+                </tr>
+                <tr>
+                    <td id="sub1">< b >< /b ></td>
+                    <td id="sub2">เป็นการทำตัวอักษรหนา ต่างกับ strong ในบริบทที่ว่า strong เน้นว่าเป็นข้อความสำคัญต้องทราบ แต่ b แค่ทำให้หนาเฉยๆ</td>
+                </tr>
+                <tr>
+                    <td id="sub1">< em >< /em ></td>
+                    <td id="sub2">ทำให้อักษรที่ครอบอยู่เอียง</td>
+                </tr>
+                <tr>
+                    <td id="sub1">< mark >< /mark ></td>
+                    <td id="sub2">เป็นการ highlight เน้นข้อความที่ครอบเอาไว้</td>
+                </tr>
+                <tr>
+                    <td id="sub1">< i >< /i ></td>
+                    <td id="sub2">ทำให้อักษรที่ครอบอยู่เอียงโดยใช้ในบริบทที่ต้องการจะสื่อสารถึง เสียง หรือ อารมณ์ ภายในเนื้อหา นอกจากนี้ยังใช้ใน technical term เช่นบริบทในภาษาอื่น, ชื่อเรือ เป็นต้น</td>
+                </tr>
+                <tr>
+                    <td id="sub1">< sub >< /sub ></td>
+                    <td id="sub2">ทำให้ขนาดอักษรที่ครอบไว้ลดลงขนาดครึ่งหนึ่งและเคลื่อนต่ำลงในบรรทัดเดียวกัน เช่น การเขียนตัวเลขบทสัญลักษณ์ธาตุในทางเคมีเป็นต้น</td>
+                </tr>
+                <tr>
+                    <td id="sub1">< sup >< /sup ></td>
+                    <td id="sub2">ทำให้ขนาดอักษรที่ครอบไว้ลดลงขนาดครึ่งหนึ่งและเคลื่อนขึ้นในบรรทัดเดียวกัน เช่น การเขียนลำดำในภาษาอังกฤษ, การเขียนเลขยกกำลัง เป็นต้น</td>
+                </tr>
+            </tbody>
+        </table>
 
 
     </div>
