--- a/CSSLAB.html
+++ b/CSSLAB.html
@@ -1,3 +1,4 @@
+<!-- ทำเน้นการใช้งานเท่าที่รู้เบื้องต้นก่อน ,เรื่องที่ควรทำให้ดีขึ้น: ต้องกลับมาจัดการเรื่องการจัดวางและต้องจัดการเรื่อง dirty code ให้มีประสิทธิภาพกว่านี้ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +19,7 @@
     .tooltip:hover .tooltiptext{
         visibility: visible;
     }
-    /* tooltip : ตั้งค่าให้ตัวอักษรมีสถานะ hidden จากนั้นตั้งค่าให้เมื่อนำเม้าส์ไปชี้ที่ element เป้าหมายให้ทำการเปลี่ยนสถานะ เป็น visible */
+    /* tooltip : ตั้งค่าให้ตัวอักษรมีสถานะ hidden จากนั้นตั้งค่าให้เมื่อนำเม้าส์ไปชี้ที่ element เป้าหมายให้ทำการเปลี่ยนสถานะ เป็น visible (เน้นวิธีการทำงานก่อนนะครับขอละเรื่องการจัดวางโครงสร้างให้สมเหตุสมผล) */
     .Pagination{ 
         border: 1px solid black;
     }
@@ -92,7 +93,7 @@
             การใช้ CSS ให้เลขหน้าของ webpage
             </td>
         </tr>
-        <!-- Pagination : คือการใช้ตัวเลขกำกับลำดับหน้าของ webpage -->
+        <!-- Pagination : คือการใช้ตัวเลขกำกับลำดับหน้าของ webpage ใช้ <a href=""></a> จัดการการเชื่อมต่อ-->
         <tr>
             <td class="pagination">
             ตัวอย่าง
@@ -120,6 +121,9 @@
         </tbody>
 
     </table>
+
+     <!-- Dropdown : สร้างให้ sub menu เป็น child ของหัวข้อ จากนั้น class ของ sub menu ให้มีสถานะซ้อนตัวแบบ absolute 
+     จากนั้นกำหนดให้ class ของหัวข้อมีสถานะ hover แล้วจะทำให้ child มีสถานะ display เป็น block เพื่อปรากฎตัว (เรื่องการตกแต่งกับขนาดขอละเว้นนะครับเน้นการทำงาน) -->
       <div class="drop">
           <ul>
               <li><a href="#">ตัวอย่าง : dropdown</a>
