--- a/CSSLAB.html
+++ b/CSSLAB.html
@@ -90,7 +90,7 @@
             </td>
         </tr>
             <td>
-            การใช้ CSS ให้เลขหน้าของ webpage
+            การใช้ CSS กำหนดเลขหน้าของ webpage
             </td>
         </tr>
         <!-- Pagination : คือการใช้ตัวเลขกำกับลำดับหน้าของ webpage ใช้ <a href=""></a> จัดการการเชื่อมต่อ-->
@@ -122,9 +122,11 @@
 
     </table>
 
-     <!-- Dropdown : สร้างให้ sub menu เป็น child ของหัวข้อ จากนั้น class ของ sub menu ให้มีสถานะซ้อนตัวแบบ absolute 
+     <!-- Dropdown : สร้างให้ sub menu เป็น child ของหัวข้อ จากนั้น class ของ sub menu ให้มีสถานะซ้อนตัว และ position เป็น absolute เพื่อยึดตำแหน่ง
      จากนั้นกำหนดให้ class ของหัวข้อมีสถานะ hover แล้วจะทำให้ child มีสถานะ display เป็น block เพื่อปรากฎตัว (เรื่องการตกแต่งกับขนาดขอละเว้นนะครับเน้นการทำงาน) -->
-      <div class="drop">
+     <!-- ลืมจัดการเรื่องขนาดของบล็อคหัวข้อครับเดี๋ยวมาแก้วันหลังครับ -->
+      
+     <div class="drop">
           <ul>
               <li><a href="#">ตัวอย่าง : dropdown</a>
                 <ul>
