--- a/labWebNews.html
+++ b/labWebNews.html
@@ -1,4 +1,6 @@
-<!-- เน้นการจัดโครงไม่ได้ลงใน detail ,ละการตกแต่งปลีกย่อย , ใช้สีกับขอบเพื่อง่ายต่อการดูขอบเขต ,ยังไม่แน่ใจเรื่องการใช้ flex -->
+<!-- หน้าเว็บหลักของ https://www.bbc.com/thai (เว็บข่าว) -->
+<!-- เน้นการจัดโครงไม่ได้ลงใน detail ,ละการตกแต่งปลีกย่อย , 
+    ใช้สีกับขอบเพื่อง่ายต่อการดูขอบเขต ,ยังไม่แน่ใจเรื่องการใช้ flex, responsive ยังไม่เป็น -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
