--- a/labWebNews.html
+++ b/labWebNews.html
@@ -15,6 +15,7 @@
 2. sectionเนื้อข่าวแบ่งเป็น 8 ส่วนทีเป็นเนื้อข่าวเป็นการ recycle Pattern ของ section ที่ 1 เป็นต้นแบบ
 
 pattern ถ้าใช้ grid จะง่ายต่อการจัดวางสลับตำแหน่งได้สะดวกในการสลับตำแหน่งเพิ่มลด column และ row 
+โดยพื้นที่ฐานใช้ grid 2 column ต่อ 1 block 
 
 
 ลำดับ Pattern สำหรับเนื้อข่าวหลัก เป็นดังนี้
