--- a/labShoppingWeb.html
+++ b/labShoppingWeb.html
@@ -13,6 +13,7 @@
     3.top-topic + nav finance
     
     ตั้งแต่หัวข้อที่ 4 ลงไปจะเป็นการรวม conntainer ด้วยกัน
+    โดยการเปลี่ยนหัวข้อจะใช้ flex สร้างส่วนแทบกั้นเพื่อแบ่ง section 
     4.banner
     5.category section
     6.announcement section
