--- a/labShoppingWeb.html
+++ b/labShoppingWeb.html
@@ -9,7 +9,7 @@
     หัวเว็บใช้การจัดวางแบบ flex ในการจัดเรียง
     หัวข้อ1-3แยก container โดยมช้ flex ในการสร้างและวางตำแหน่ง
     1. navbar customer support + login bar
-    2.banner-header + searchbar
+    2.banner-header + searchbar : ใช้ Tooltip ในการสร้าง feature 
     3.top-topic + nav finance
     
     ตั้งแต่หัวข้อที่ 4 ลงไปจะเป็นการรวม conntainer ด้วยกัน
